{
  "version": 4,
  "terraform_version": "1.3.9",
  "serial": 506,
  "lineage": "45a090d9-ce06-19f9-ae61-bcc202143668",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038226218:internet-gateway/igw-0adc583abad7eac00",
            "id": "igw-0adc583abad7eac00",
            "owner_id": "794038226218",
            "vpc_id": "vpc-0f95dba0f2d6cf5e2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038226218:route-table/rtb-04bbb37d1abd61a48",
            "id": "rtb-04bbb37d1abd61a48",
            "owner_id": "794038226218",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "private"
            },
            "tags_all": {
              "Name": "private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f95dba0f2d6cf5e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038226218:route-table/rtb-04d254d1332619be2",
            "id": "rtb-04d254d1332619be2",
            "owner_id": "794038226218",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0adc583abad7eac00",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public"
            },
            "tags_all": {
              "Name": "public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f95dba0f2d6cf5e2"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09d72258c82a7b40a",
            "route_table_id": "rtb-04bbb37d1abd61a48",
            "subnet_id": "subnet-0673002c2c6376c4b"
          },
          "dependencies": [
            "aws_route_table.private",
            "aws_subnet.private_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0100a1897f99c62f8",
            "route_table_id": "rtb-04d254d1332619be2",
            "subnet_id": "subnet-008239a6c7a25a425"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public",
            "aws_subnet.public_subnet",
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038226218:subnet/subnet-0673002c2c6376c4b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0673002c2c6376c4b",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "794038226218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-private"
            },
            "tags_all": {
              "Name": "udacity-private"
            },
            "vpc_id": "vpc-0f95dba0f2d6cf5e2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038226218:subnet/subnet-008239a6c7a25a425",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-008239a6c7a25a425",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "794038226218",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "udacity-public"
            },
            "tags_all": {
              "Name": "udacity-public"
            },
            "vpc_id": "vpc-0f95dba0f2d6cf5e2"
          },
          "dependencies": [
            "aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:794038226218:vpc/vpc-0f95dba0f2d6cf5e2",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0f0242db9df9892cc",
            "default_route_table_id": "rtb-0a186d351d00d811b",
            "default_security_group_id": "sg-0fd4477269869fb50",
            "dhcp_options_id": "dopt-0c5d0552499ee38e4",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f95dba0f2d6cf5e2",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0a186d351d00d811b",
            "owner_id": "794038226218",
            "tags": {
              "Name": "udacity"
            },
            "tags_all": {
              "Name": "udacity"
            }
          }
        }
      ]
    }
  ]
}